Fix nav overflow on links

--- a/wp-content/themes/ahoia-2017/assets/styles/modules/_homepage-slider.scss
+++ b/wp-content/themes/ahoia-2017/assets/styles/modules/_homepage-slider.scss
@@ -68,20 +68,20 @@
 	}
 }
 
-@keyframes homepageColorHero{
-  0%{
-    background-color:rgba(79,20,218,.8);
-  }
-  33%{
-    background-color:rgba(244,79,79,.8);
-  }
-  66%{
-    background-color:rgba(252,149,59,.8);
-  }
-  100%{
-    background-color:rgba(222,61,134,.8);
-  }
-}
+// @keyframes homepageColorHero{
+//   0%{
+//     background-color:rgba(79,20,218,.8);
+//   }
+//   33%{
+//     background-color:rgba(244,79,79,.8);
+//   }
+//   66%{
+//     background-color:rgba(252,149,59,.8);
+//   }
+//   100%{
+//     background-color:rgba(222,61,134,.8);
+//   }
+// }
 
 
 .section__hello{
