--- a/wp-content/themes/ahoia-2017/assets/styles/modules/_main-header.scss
+++ b/wp-content/themes/ahoia-2017/assets/styles/modules/_main-header.scss
@@ -172,10 +172,10 @@
 
 		&__nav{
       padding-top:74px;
-			background:none;
       position:relative;
-      
-			
+      background:none;
+      height:auto;
+    
 
 			&__links{
         width:30%;
